--- a/Source/FE/package.json
+++ b/Source/FE/package.json
@@ -3,6 +3,8 @@
   "version": "0.0.1",
   "devDependencies": {
     "amd-optimize": "^0.6.0",
-    "gulp-requirejs": "^0.1.3"
+    "gulp-replace": "^0.5.4",
+    "gulp-requirejs": "^0.1.3",
+    "gulp-shell": "^0.5.0"
   }
 }
